fixed positioning of footer in venue.html and overflow of the sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body{
 }
 
 /****************************** Header styling ***************************************/
+
 h2{   
     font-family: Arial, Helvetica, sans-serif;
      letter-spacing: 2px;
@@ -102,10 +103,50 @@ nav{
     top: 400px;
     left: 150px;
 }
+
+/****************************** Venue site styling ***************************************/
+
+
+.first-text {
+    width: 100%;
+    background-color: aqua;
+    text-align: left;
+    padding: 200px;
+    overflow: hidden;
+    position: relative;
+}
+
+.second-text {
+    width: 100%;
+    background-color: blueviolet;
+    text-align: center;
+    padding: 200px;
+}
+
+.third-text {
+    width: 100%;
+    background-color: brown;
+    text-align: center;
+    padding: 200px;
+}
+
+.first-image{
+    width: 600px;
+    height: 400px;
+
+
+    background-color: white;
+
+    bottom: 10px;
+    right: 120px;
+    top: 10px;
+
+    position: absolute;
+}
 /******************************footer styling ***************************************/
 .footer-container{
     width: 100%;
-    line-height: 20px;
+    line-height: 10px;
 }
 
 .social-icons{
@@ -141,67 +182,3 @@ nav{
     transition: 0.5s;
 }
 
-/****************************** Venue site styling ***************************************/
-
-.first-text{
-    width:100%;
-    float: right;
-    background-color: aqua;
-    text-align: center;
-    padding:200px;
-}
-
-.second-text {
-    width: 100%;
-    float: right;
-    background-color: blueviolet;
-    text-align: center;
-    padding: 200px;
-}
-
-.third-text {
-    width: 100%;
-    float: right;
-    background-color: brown;
-    text-align: center;
-    padding: 200px;
-}
-/******************************footer styling ***************************************/
-.footer-container {
-    width: 100%;
-    line-height: 20px;
-}
-
-.social-icons {
-    display: flex;
-    justify-content: center;
-
-}
-
-.social-icons a {
-    text-decoration: none;
-    background-color: white;
-    padding: 20px;
-    margin-top: 2px;
-}
-
-
-.social-icons a {
-    font-size: 2em;
-    color: black;
-    opacity: 20;
-    border-radius: 70%;
-}
-
-.footer-bottom {
-    display: flex;
-    justify-content: center;
-    color: black;
-    opacity: 20;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.social-icons a:hover {
-    background-color: rgb(88, 88, 88);
-    transition: 0.5s;
-}
